# pipensx

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  Makefile  Makefile.pc  Makefile.switch  PERF_PLAN.md  README.md  RF_ACCESS_PLAN.md  SECURITY.md  SEEDING_PLAN.md  SYSMODULE_PLAN.md  THIRD_PARTY_NOTICES.md  UI_PLAN.md
.github/workflows/: ci.yml  golden.yml  switch-release.yml
docs/plans/: CATALOG_METADATA_INDEX_PLAN.md  IMPROVEMENT_PLAN.md  PERF_PLAN.md  README.md  WEBSEED_PLAN.md
resources/i18n/en-US/: pipensx.json
resources/i18n/ru/: hints.json  pipensx.json
scripts/: build_switch.sh  check_i18n.py  decode_report.py  deploy_switch.sh  golden.sh
src/: main_pc.c  main_switch.c  main_switch.cpp  update_helper.c
src/app/: app_settings.cpp  app_settings.hpp  bug_report.cpp  bug_report.hpp  catalog_batch_installer.cpp  catalog_batch_installer.hpp  catalog_presentation.cpp  catalog_presentation.hpp  catalog_refresh.cpp  catalog_refresh.hpp  catalog_service.cpp  catalog_service.hpp  connectivity_orchestrator.cpp  connectivity_orchestrator.hpp  download_manager.cpp  download_manager.hpp  favorites_service.cpp  favorites_service.hpp  game_metadata_service.cpp  game_metadata_service.hpp  install_space.cpp  install_space.hpp  installed_title_service.cpp  installed_title_service.hpp  magnet_resolver.cpp  magnet_resolver.hpp  mod_index_service.cpp  mod_index_service.hpp  request_gate.cpp  request_gate.hpp  rutracker_client.cpp  rutracker_client.hpp  stream_ram_budget.cpp  stream_ram_budget.hpp  update_service.cpp  update_service.hpp  update_transaction.c  update_transaction.h  web_seed_source.cpp  web_seed_source.hpp
src/core/: antizapret.c  antizapret.h  bencode.c  bencode.h  catalog_sig.c  catalog_sig.h  dht.c  dht.h  metainfo.c  metainfo.h  mse.c  mse.h  net.c  net.h  peer.c  peer.h  piece.c  piece.h  sha1.c  sha1.h  sha256.c  sha256.h  torrent.c  torrent.h  tracker.c  tracker.h  util.c  util.h
src/install/: install_backend.hpp  install_backend_pc.cpp  install_backend_switch.cpp  install_journal.cpp  install_journal.hpp  package_stream.cpp  package_stream.hpp
src/platform/: storage.c  storage.h  switch_crashlog.c  switch_crashlog.h  switch_performance.cpp  switch_performance.hpp
src/platform/pc/: switch.h  switch_shim.cpp
src/ui/: i18n.hpp  main_frame.hpp  theme.hpp
src/ui/catalog/: batch_install.cpp  batch_install.hpp  catalog_cells.hpp  catalog_grid.hpp  catalog_helpers.hpp  catalog_view.cpp  catalog_view.hpp
src/ui/common/: action_icon.hpp  async_image.hpp  message_cells.hpp  progress_bar.hpp  speed_graph.hpp  storage_meter.hpp  ui_helpers.hpp
src/ui/detail/: game_detail.hpp  screenshot_viewer.hpp  torrent_selection.cpp  torrent_selection.hpp
src/ui/downloads/: details_activity.hpp  download_cell.hpp  downloads_view.cpp  downloads_view.hpp  file_picker.cpp  file_picker.hpp
src/ui/installed/: installed_view.hpp
src/ui/settings/: about_view.cpp  about_view.hpp  advanced_settings.hpp  bug_report_view.cpp  bug_report_view.hpp  connectivity_wizard.hpp  settings_cells.hpp  settings_view.hpp
tests/: test_antizapret.c  test_app_settings.cpp  test_batch_install.cpp  test_bug_report.cpp  test_bug_report_decode.py  test_catalog.cpp  test_connectivity_orchestrator.cpp  test_favorites.cpp  test_install_journal.cpp  test_install_space.cpp  test_manager.cpp  test_mse.c  test_package_stream.cpp  test_peer.c  test_piece.c  test_request_gate.cpp  test_rutracker.cpp  test_stream_ram_budget.cpp  test_telemetry.c  test_telemetry_analyzer.py  test_torrent.c  test_tracker_probe.c  test_update_service.cpp  test_update_transaction.c  test_web_seed.cpp
tests/fixtures/golden/: catalog.json  game_metadata_index.json  modcd_table.md
tools/: analyze_throughput_log.py  build_game_metadata.py  check_catalog_health.py  embed_catalog_infodicts.py  golden_runner.cpp  rebuild_switch_dump_from_xml.py  sign_catalog.py
